add missing swagger docs
